--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 118px 60px;
+  padding: 118px 0;
   text-align: center;
   margin: 0 auto;
   @include retina {
