--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
   padding: 40px;
   left: 50%;
   top: 50%;
-  width: 450px;
+  width: 100%;
   height: 609px;
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -83,7 +83,7 @@
   display: block;
   margin-bottom: 10px;
   padding-left: 42px;
-  width: 370px;
+  width: 100%;
   height: 40px;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -123,7 +123,7 @@
 
 .input-message {
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   font-weight: 400;
   font-size: 12px;
@@ -543,7 +543,7 @@ img {
   color: #212121;
 }
 
-.mob-menu__link:hover {
+.mob-menu__link.current {
   color: var(--accent-blue-color);
 }
 
@@ -564,7 +564,7 @@ img {
   font-style: normal;
   text-decoration: none;
   font-weight: 500;
-  font-size: 34px;
+  font-size: 26px;
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: var(--accent-blue-color);
@@ -584,6 +584,7 @@ img {
 
 .mob-soc__list {
   display: flex;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -615,7 +616,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 118px 60px;
+  padding: 118px 0;
   text-align: center;
   margin: 0 auto;
 }
@@ -733,6 +734,10 @@ img {
   margin-bottom: 30px;
 }
 
+.principles__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
 @media screen and (min-width: 320px) {
   .examples {
     display: none;
@@ -824,6 +829,18 @@ img {
 @media screen and (min-width: 1200px) {
   .team__item {
     width: calc((100% - 90px) / 4);
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 
@@ -1006,13 +1023,13 @@ img {
 @media screen and (min-width: 1200px) {
   .address__wrap {
     margin-right: 70px;
+    text-align: start;
   }
 }
 
 .footer__logo {
   color: var(--accent-blue-color);
   font-family: "Raleway", sans-serif;
-  text-align: center;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.17;
