--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -16,7 +16,7 @@
   padding: 40px;
   left: 50%;
   top: 50%;
-  width: 450px;
+  width: 100%;
   height: 609px;
 
   background: var(--white-color);
@@ -76,7 +76,7 @@
   display: block;
   margin-bottom: 10px;
   padding-left: 42px;
-  width: 370px;
+  width: 100%;
   height: 40px;
   outline: transparent;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -113,7 +113,7 @@
 
 .input-message {
   padding: 12px 16px;
-  width: 370px;
+  width: 100%;
   height: 120px;
   @include font(400, 12px, 1.16, 0.01em);
   color: rgba(117, 117, 117, 0.5);
