--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
   padding: 40px;
   left: 50%;
   top: 50%;
-  width: 100%;
   height: 609px;
   background: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -35,6 +34,16 @@
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -429,6 +438,7 @@ img {
 @media screen and (min-width: 1200px) {
   .contacts {
     display: flex;
+    align-items: start;
   }
 }
 
@@ -467,6 +477,7 @@ img {
 
 .contacts__item:not(:last-child) {
   margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 .contacts__icon {
@@ -628,7 +639,6 @@ img {
 @media screen and (min-width: 768px) {
   .hero {
     background-image: url(../images/hero-tab.jpg);
-    padding: 118px 204px;
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -653,6 +663,8 @@ img {
 }
 
 .hero__title {
+  max-width: 360px;
+  height: 84px;
   margin: 0 auto 30px;
   font-weight: 900;
   font-size: 26px;
@@ -663,7 +675,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     height: 120px;
     font-size: 44px;
     line-height: 1.36;
@@ -692,6 +704,11 @@ img {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  .principles__title {
+    text-align: start;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1011,7 +1028,6 @@ img {
   .footer-tab__wrap {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 60px;
   }
 }
 
