--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -9,6 +9,7 @@
   }
   @include desktop {
     display: flex;
+    align-items: start;
   }
 }
 
@@ -39,6 +40,7 @@
 
 .contacts__item:not(:last-child) {
   margin-right: 30px;
+  margin-bottom: 10px;
 }
 
 .contacts__icon {
