--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -17,7 +17,6 @@
   }
   @include tablet {
     background-image: url(../images/hero-tab.jpg);
-    padding: 118px 204px;
     @include retina {
       background-image: url(../images/hero-tab-2x.jpg);
     }
@@ -36,13 +35,15 @@
 }
 
 .hero__title {
+  max-width: 360px;
+  height: 84px;
   margin: 0 auto 30px;
   @include font(900, 26px, 1.62, 0.06em);
   text-transform: uppercase;
   color: var(--white-color);
 
   @include desktop {
-    width: 696px;
+    max-width: 696px;
     height: 120px;
     @include font(null, 44px, 1.36, null);
   }
