--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -16,7 +16,7 @@
   padding: 40px;
   left: 50%;
   top: 50%;
-  width: 100%;
+
   height: 609px;
 
   background: var(--white-color);
@@ -28,6 +28,12 @@
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
+  @include tablet {
+    width: 450px;
+  }
   @include desktop {
     width: 528px;
     height: 581px;
