--- a/sass/components/footer/_footer-address.scss
+++ b/sass/components/footer/_footer-address.scss
@@ -25,6 +25,8 @@
   @include tablet {
     display: flex;
     justify-content: space-around;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 60px;
   }
 }
